frontend/tests/cases/positive/interfaces/simple/interface-simple-10.gr
-- interface with kind
interface Simple (a : Type -> Type) where
  simple : forall {b : Type} . a b -> a b
