frontend/tests/cases/negative/interfaces/name-clash/name-clash-interface.gr
interface Foo a where
  simple : a -> a

interface Foo b where
  simple2 : b -> b
